# advent

./: .gitignore  README.md
2018/: README.md  day-01.ipynb  day-02.ipynb  day-03.ipynb  day-04.ipynb  day-05.ipynb
2018/day-01/: day-01.ipynb
2018/day-02/: day-02.ipynb
2018/day-03/: day-03.ipynb
2019/: README.md  day-01-julia.ipynb  day-01.ipynb  day-02-julia.ipynb  day-02.ipynb  day-03-julia.ipynb  day-03.ipynb  day-04-julia.ipynb  day-04.ipynb  day-05-julia.ipynb  day-05.ipynb  day-06-julia.ipynb  day-06.ipynb  day-07-julia.ipynb  day-08-julia.ipynb
2019/day-01/: day-01-julia.ipynb  day-01.ipynb
2019/day-04/: day-04-julia.ipynb  day-04.ipynb
2021/: day-01.ipynb  day-02.ipynb  day-03.ipynb  day-04.ipynb  day-05.ipynb  day-06.ipynb  day-07.ipynb  day-08.ipynb  day-09.ipynb  day-10.ipynb  day-11.ipynb  day-12.ipynb  day-13.ipynb  day-14.ipynb  day-15.ipynb  day-16.ipynb  day-17.ipynb  day-18.ipynb
2022/: _scratch.ipynb  _template.ipynb  day-01.ipynb  day-02.ipynb  day-03.ipynb  day-04.ipynb  day-05.ipynb  day-06.ipynb  day-07.ipynb  day-08.ipynb  day-10.ipynb  day-11.ipynb
2023/: .gitignore  day-01.ipynb  day-02.ipynb  day-03.ipynb  day-04.ipynb  day-05.ipynb  day-06.ipynb  day-07.ipynb  day-08.ipynb  day-09.ipynb  day-10.ipynb  day-11.ipynb  day-12.ipynb  day-13.ipynb  day-14.ipynb  day-15.ipynb  day-16.ipynb  day-17.ipynb
2024/: .gitignore  Cargo.toml  README.md  day-01.ipynb  day-02.ipynb  day-03.ipynb  day-04.ipynb  day-05.ipynb  day-06.ipynb  day-07.ipynb  day-08.ipynb  day-09.ipynb  day-11.ipynb  day-12.ipynb  day-13.ipynb  day-14.ipynb  pyproject.toml
2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day15.rs  day16.rs  day17.rs  lib.rs
2025/: .gitignore  Cargo.toml
2025/day01/: Cargo.toml
2025/day01/src/: main.rs
2025/day02/: Cargo.toml
2025/day02/src/: main.rs
2025/day03/: Cargo.toml
2025/day03/src/: main.rs
2025/day04/: Cargo.toml
2025/day04/src/: main.rs
2025/day05/: Cargo.toml
2025/day05/src/: main.rs
2025/day06/: Cargo.toml
2025/day06/src/: main.rs
2025/grid/: Cargo.toml
2025/grid/src/: lib.rs
