[package]
name = "rs"
version = "0.1.0"
edition = "2021"
default-run = "day03"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
itertools = "0.13.0"
regex = "1.11.1"


[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day01"
path = "src/day01.rs"
