[package]
name = "rs"
version = "0.1.0"
edition = "2021"
default-run = "day10"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
itertools = "0.13.0"
nalgebra = "0.33.2"
num = "0.4.3"
regex = "1.11.1"


[[bin]]
name = "day10"
path = "src/day10.rs"

[[bin]]
name = "day09"
path = "src/day09.rs"

[[bin]]
name = "day08"
path = "src/day08.rs"

[[bin]]
name = "day07"
path = "src/day07.rs"

[[bin]]
name = "day06"
path = "src/day06.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day01"
path = "src/day01.rs"
