[project]
name = "mdr-aoc-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "scipy",

    "matplotlib",
    "seaborn",

    "bokeh",
    "hvplot",
    "panel",

    "ipykernel",
    "ipywidgets",
    "tqdm",
]
